# api

./: 404.html  Dockerfile  README.md  index.html  mkdocs.yml  pyproject.toml
api/src/classes/: Location.py  SevenTimer.py  WeatherInformation.py  WeatherTimeseries.py
api/src/handlers/: gmaps.py
api/src/processor/: from_google.py  from_string.py
api/src/utils/: enums.py  functions.py  logger.py
docs/: index.md
tests/: conftest.py
tests/classes/: test_Location.py  test_Location_get_from_string.py  test_coordinate_validator.py  test_location_get_from_string.py  test_location_transform_coordinate.py  test_seven_timer.py  test_weather_time_series_calc_time_series.py
tests/mocks/: gmaps.py  requests.py
